# Traction-hackaton

./: .gitignore  README.md  audio_requirements_temp.txt  pyproject.toml
api/: main.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  ServiceBox.tsx  ServiceStep.tsx
frontend/src/pages/: Home.tsx  ServiceOrder.tsx  ServicesList.tsx  VoiceRequest.tsx
media/: equipment_data_grouped.json  requisicao_servico_exemplo.txt
tractian_hackathon/: __init__.py  app.py  employee_scheduler.py  models.py  resposta_Como realizar a manutenção seg.json  resposta_Preciso de uma manutenção na m.json  routes.py  speech_openai.py  tests.py
tractian_hackathon/experimental/: data_gen.py  employee_scheduler.py  speech_openai.py  tests.py
tractian_hackathon/prompts/: equipamentos.csv
tractian_hackathon/services/: audio_service.py  llm_service.py  offline_service.py
