[tool.poetry]
name = "tractian-hackathon"
version = "0.1.0"
description = ""
authors = ["Caio Wingeter <castilhocaio1164@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.52.2"
pypdf2 = "^3.0.1"
numpy = "^2.1.2"
tiktoken = "^0.8.0"
pydantic = "^2.9.2"
speechrecognition = "^3.11.0"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
